# hydra-sentinel

./: '  .env  .envrc  .gitignore  .nixos-test-history  Cargo.toml  TODO.md  flake.nix  package.nix
.github/workflows/: check-flake.yml
builder-proto/: Cargo.toml
builder-proto/src/: lib.rs  rate_limiter.rs
client/: Cargo.toml  local.toml
client/src/: main.rs
hydra-client/: Cargo.toml
hydra-client/src/: keep_alive.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
nix/modules/: server.nix
nix/modules/client/: darwin.nix  nixos.nix  options.nix
nix/tests/: connect.nix
patches/apple-bindgen/: 0001-disable-include-path-detection.patch  0002-use-apple_sdk-SdkSearch-instead-of-xcrun.patch  default.nix
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml  local.toml
server/src/: config.rs  default.toml  error.rs  main.rs
server/src/github/: middleware.rs  webhook.rs
server/src/hydra/: client.rs  store.rs  websocket.rs
server/src/model/: build_machine.rs  builder.rs  mac_address.rs  machine.rs  mod.rs  nix_machine.rs  system.rs
src/: builder.rs  config.rs  default.toml  hydra.rs  main.rs
src/hydra/: client.rs  mod.rs  state.rs  store.rs  websocket.rs
tests/: hydra.rs
