[workspace]
members = [ "builder-proto","hydra-client"]


[workspace.dependencies]
anyhow = "1.0.81"
figment = { version = "0.10", features = ["env"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package]
name = "hydra-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
builder-proto.path = "./builder-proto"

anyhow.workspace = true
axum = { version = "0.7.5", features = ["ws", "http2", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "tracing"] }
figment.workspace = true
futures-util = { version = "0.3.30", default-features = false }
hex = "0.4.3"
hmac = "0.12.1"
listenfd = "1.0.1"
reqwest = { version = "0.12.1", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
tokio.workspace = true
tower = { version = "0.4.13", default-features = false, features = ["tracing"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber.workspace = true
tracing.workspace = true
wake-on-lan = "0.2.0"
