[workspace]
members = [ "protocol", "client" , "server" ]

[workspace.dependencies]
anyhow = "1.0.81"
figment = "0.10"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
axum-extra = "0.9.3"
backon = "0.4.3"
figment_file_provider_adapter = "0.1.1"
futures-util = { version = "0.3.30", default-features = false }
hex = "0.4.3"
hmac = "0.12.1"
humantime-serde = "1.1.1"
keepawake = "0.5.1"
listenfd = "1.0.1"
reqwest = "0.12.1"
secrecy = "0.8.0"
sha2 = "0.10.8"
tokio-tungstenite = "0.21.0"
tower = { version = "0.4.13", default-features = false }
tower-http = "0.5.2"
url = "2.5.0"
wake-on-lan = "0.2.0"

