[package]
name = "hydra-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builder-proto.path = "../builder-proto/"

anyhow = "1.0.81"
axum-extra = "0.9.3"
backon = "0.4.3"
figment.workspace = true
futures-util = { version = "0.3.30", default-features = false }
keepawake = "0.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url = { version = "2.5.0", features = ["serde"] }
